# Weather-dagster-pipeline

./: README.md
weather-pipeline-dagster-dbt/: README.md
weather-pipeline-dagster-dbt/DBT/: README.md  dbt_project.yml
weather-pipeline-dagster-dbt/DBT/models/: daily_weather_stats.sql  sources.yml
weather-pipeline-dagster-dbt/mon_pipeline_data/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
weather-pipeline-dagster-dbt/mon_pipeline_data/DOC/: Projet_Meteo_Lyon.pbix
weather-pipeline-dagster-dbt/mon_pipeline_data/PY/: assets.py  definitions.py  ml.py  visualisation.py
weather-pipeline-dagster-dbt/mon_pipeline_data/tests/: test_assets.py
