[project]
name = "mon_pipeline_data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "mon_pipeline_data.definitions"
code_location_name = "mon_pipeline_data"
